# pawcast

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  desktop-media-engine-plan.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: launch.json  settings.local.json
docs/: claude-handoff.md  cmd-handoff.md  platform-architecture.md  revamp-plan.md  user-data-persistence-plan.md
electron/: dataStore.ts  healthCheck.ts  journalManager.ts  main.ts  manifestManager.ts  migrationManager.ts  preload.ts  snapshotManager.ts  waveformEngine.ts  waveformProbe.ts
public/: site.webmanifest
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  data.rs  migration.rs  mod.rs  windows.rs
src-tauri/src/media/: mod.rs  protocol.rs
src-tauri/src/persistence/: health.rs  journal.rs  manifest.rs  migration.rs  mod.rs  paths.rs  store.rs
src-tauri/tests/: health.rs  media_protocol.rs  migration.rs  persistence.rs
src-tauri/tests/fixtures/: electron-app-config.json
src-tauri/tests/fixtures/PawcastData/: manifest.json
tests/: aiService.test.mjs  aiSettingsSync.test.ts  desktopApi.test.ts  desktopFrontend.test.mjs  findActiveWord.test.ts  legacySeed.test.ts  librarySidebarDesktop.test.mjs  mediaController.test.ts  persistedStoreSync.test.ts  playbackClock.test.ts  sentenceSeek.test.ts  transcriptSegments.test.ts  waveformAnalysis.test.ts  (+2 more)
(+147 files in other folders)
