[package]
name = "pawcast"
version = "1.0.0-beta.3"
description = "Pawcast desktop runtime"
edition = "2021"

[lib]
name = "pawcast_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pawcast"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5" }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
hex = "0.4"
mime_guess = "2"
notify = "8"
parking_lot = "0.12"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11" }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
